Update Swagger docs
