# src/api-server/http/docs/swagger.json
@@ -4,9 +4,9 @@
         "contact": {}
     },
     "paths": {
-        "/api/addModule": {
+        "/api/createModule": {
             "post": {
-                "description": "Create Module",
+                "description": "Store module data into SQLite database",
                 "consumes": [
                     "application/json"
                 ],
@@ -40,7 +40,7 @@
         },
         "/api/deleteModule": {
             "get": {
-                "description": "Delete Module by id",
+                "description": "Delete module by id",
                 "consumes": [
                     "application/json"
                 ],
@@ -72,7 +72,7 @@
         },
         "/api/deployModule": {
             "post": {
-                "description": "Create Module",
+                "description": "Deploy the specified module onto every agent in the cluster",
                 "consumes": [
                     "application/json"
                 ],
@@ -135,7 +135,7 @@
         },
         "/api/undeployModule": {
             "post": {
-                "description": "Undeploy Module By ID",
+                "description": "Undeploy the specified module from all agents in the cluster",
                 "consumes": [
                     "application/json"
                 ],
@@ -241,6 +241,9 @@
                 "create_time": {
                     "type": "string"
                 },
+                "desire_state": {
+                    "type": "integer"
+                },
                 "ebpf": {
                     "type": "string"
                 },
@@ -260,6 +263,7 @@
                     "type": "string"
                 },
                 "id": {
+                    "description": "tag schema https://gorm.io/docs/models.html#Fields-Tags",
                     "type": "string"
                 },
                 "name": {
@@ -270,9 +274,6 @@
                 },
                 "schema_name": {
                     "type": "string"
-                },
-                "status": {
-                    "type": "integer"
                 },
                 "wasm": {
                     "description": "wasm store the whole wasm file content",
@@ -377,13 +378,12 @@
             "type": "object",
             "properties": {
                 "code": {
+                    "description": "Semantic and usage follow HTTP statues code convention.\nhttps://developer.mozilla.org/en-US/docs/Web/HTTP/Status",
                     "type": "integer"
                 },
                 "message": {
+                    "description": "A human readable message explain the details of the status.",
                     "type": "string"
-                },
-                "success": {
-                    "type": "boolean"
                 }
             }
         },
@@ -391,13 +391,12 @@
             "type": "object",
             "properties": {
                 "code": {
+                    "description": "Semantic and usage follow HTTP statues code convention.\nhttps://developer.mozilla.org/en-US/docs/Web/HTTP/Status",
                     "type": "integer"
                 },
                 "message": {
+                    "description": "A human readable message explain the details of the status.",
                     "type": "string"
-                },
-                "success": {
-                    "type": "boolean"
                 },
                 "uid": {
                     "type": "string"
@@ -408,13 +407,12 @@
             "type": "object",
             "properties": {
                 "code": {
+                    "description": "Semantic and usage follow HTTP statues code convention.\nhttps://developer.mozilla.org/en-US/docs/Web/HTTP/Status",
                     "type": "integer"
                 },
                 "message": {
+                    "description": "A human readable message explain the details of the status.",
                     "type": "string"
-                },
-                "success": {
-                    "type": "boolean"
                 }
             }
         },
@@ -422,6 +420,7 @@
             "type": "object",
             "properties": {
                 "code": {
+                    "description": "Semantic and usage follow HTTP statues code convention.\nhttps://developer.mozilla.org/en-US/docs/Web/HTTP/Status",
                     "type": "integer"
                 },
                 "data": {
@@ -431,10 +430,8 @@
                     }
                 },
                 "message": {
+                    "description": "A human readable message explain the details of the status.",
                     "type": "string"
-                },
-                "success": {
-                    "type": "boolean"
                 }
             }
         },
